Initial commit - SmartFit Studio Website

--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SmartTailor Pro</title>
+    <title>WeaveFit</title>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- CSS LINK (correct path) -->
+
     <link rel="stylesheet" href="../CSS/style.css" />
 </head>
 <body>
 
     <!-- NAVBAR -->
     <header class="navbar">
-        <h1 class="logo">SmartTailor<span>Pro</span></h1>
+        <h1 class="logo">Weave<span>Fit</span></h1>
         <nav>
-            <a href="homepage.html">Home</a>
+    
+
+            <a href="index.html">Home</a>
             <a href="#About">About</a>
             <a href="#services">Services</a>
-            <!-- <a href="products.html">Services</a> -->
             <a href="login.html">Login</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -29,7 +32,7 @@
 
   <div class="hero-content">
     <div class="hero-left">
-      <span class="badge">Since 2010 • Trusted Tailoring</span>
+      <span class="badge">Since 2000 • Trusted Tailoring</span>
 
       <h1>
         Perfect Fit.<br>
@@ -43,12 +46,11 @@
 
       <div class="hero-buttons">
 
-        <!-- 🔹 Scroll to Services section -->
         <a href="#services" class="btn primary">
           Explore Services
         </a>
 
-        <!-- 🔹 Redirect to services page -->
+        <!--  Redirect to services page -->
         <a href="services.html" class="btn secondary">
           Book Tailoring
         </a>
@@ -58,10 +60,12 @@
   </div>
 </section>
 
-    <!-- HERO SECTION END -->
 
    <!-- ABOUT HERO -->
-   <center> <h1>NEW AGE-CUSTOM CLOTHING</h1></center>
+    <section class="about">
+<center><h1>NEW AGE-CUSTOM CLOTHING</h1></center>
+</section>
+
 <section class="about-wrapper" id="About">
 
   <!-- BLOCK 1 -->
@@ -72,7 +76,7 @@
     <div class="about-text slide-right">
       <h2>Our Story</h2>
       <p>
-        SmartTailor Pro was founded with a vision to redefine tailoring.
+        WeaveFit was founded with a vision to redefine tailoring.
         We blend traditional craftsmanship with modern fashion to
         deliver perfectly fitted garments that enhance confidence.
       </p>
@@ -100,16 +104,16 @@
       <img src="https://phoenixcitadel.s3.ap-south-1.amazonaws.com/RelatedFiles/fbf0bc65-d108-4625-b973-53aea3fdbce6_FAB%20INDIA_0003_DSCF1441.jpg" alt="">
     </div>
     <div class="about-text slide-right">
-      <h2>Why SmartTailor Pro?</h2>
+      <h2>Why WeaveFit?</h2>
       <p>
         We stand out through expert tailors, perfect-fit assurance,
-        premium materials, and modern digital convenience — ensuring
-        every customer experiences excellence.
+        premium materials, and modern digital convenience.
       </p>
     </div>
   </div>
 
 </section>
+
 
 
 <!-- SERVICES SECTION -->
@@ -125,7 +129,6 @@
       <div class="card-overlay">
         <h2>Women Tailoring</h2>
         <p>Elegant stitching for every occasion</p>
-        <!-- ✅ CHANGE HERE -->
         <button onclick="location.href='services.html'">Explore</button>
       </div>
     </div>
@@ -136,7 +139,6 @@
       <div class="card-overlay">
         <h2>Men Tailoring</h2>
         <p>Perfect fit for modern & classic styles</p>
-        <!-- ✅ CHANGE HERE -->
         <button onclick="location.href='services.html'">Explore</button>
       </div>
     </div>
@@ -146,7 +148,6 @@
 
 
 <!-- FABRIC SLIDER SECTION -->
-<!-- FULL WIDTH FABRIC SLIDER -->
  <section class="fabric-header">
   <h1 class="section-title">Premium Fabric Collection</h1>
   <p class="section-subtitle">
@@ -163,7 +164,7 @@
     <div class="fabric-overlay"></div>
     <div class="fabric-content">
       <h2>Chudidar Fabric</h2>
-      <p>Soft • Elegant • Comfortable</p>
+      <p>Elegant Designer Chudidar Fabrics</p>
 <button class="choose-btn" data-page="kurti.html">Choose Fabric</button>
     </div>
   </div>
@@ -173,7 +174,7 @@
     <div class="fabric-overlay"></div>
     <div class="fabric-content">
       <h2>Blouse Fabric</h2>
-      <p>Premium Designer Collection</p>
+      <p>Exclusive Designer Blouse Fabric</p>
 <button class="choose-btn" data-page="blouse.html">Choose Fabric</button>    </div>
   </div>
 
@@ -182,7 +183,7 @@
     <div class="fabric-overlay"></div>
     <div class="fabric-content">
       <h2>Lehenga Fabric</h2>
-      <p>Luxury Festive Wear</p>
+      <p>Luxury Designer Lehenga Fabric</p>
 <button class="choose-btn" data-page="lehenga.html">Choose Fabric</button>
     </div>
   </div>
@@ -191,8 +192,8 @@
        style="background-image: url('https://5.imimg.com/data5/EX/BW/TE/SELLER-4410597/shirting-fabric-500x500.jpg');">
     <div class="fabric-overlay"></div>
     <div class="fabric-content">
-      <h2>Shirt Fabric</h2>
-      <p>Formal & Casual Wear</p>
+      <h2>Shirts  Fabrics</h2>
+      <p>Smart Casual Shirt Fabricr</p>
 <button class="choose-btn" data-page="shirt.html">Choose Fabric</button>    </div>
   </div>
 
@@ -200,8 +201,8 @@
        style="background-image: url('https://5.imimg.com/data5/BC/XN/TE/SELLER-43478321/pant-fabric.jpg');">
     <div class="fabric-overlay"></div>
     <div class="fabric-content">
-      <h2>Pant Fabric</h2>
-      <p>Durable & Stylish</p>
+      <h2>Pants Fabrics</h2>
+      <p>Everyday Stretch Pant Fabric</p>
 <button class="choose-btn" data-page="pant.html">Choose Fabric</button>    </div>
   </div>
 
@@ -211,15 +212,7 @@
 
 </section>
 
-
-
-    <!-- CTA -->
-    <!-- <section class="cta">
-        <h2>Book Your Tailoring Today</h2>
-        <p>Get premium stitching at affordable prices.</p>
-    </section> -->
-
-    <!-- ================= BUSINESS INFO SECTION ================= -->
+    <!-- BUSINESS INFO SECTION  -->
 <section class="business-info">
 
   <div class="business-container">
@@ -229,7 +222,7 @@
       <h2>Pioneers in Online Custom Clothing</h2>
 
       <p>
-        SmartTailor Pro brings back the joy of custom-made clothing.
+        WeaveFit brings back the joy of custom-made clothing.
         Choose your fabric, customize your style, and get perfectly
         tailored garments delivered with precision and care.
       </p>
@@ -260,7 +253,7 @@
       </div>
 
       <div class="info-box">
-        <h3>Why SmartTailor Pro?</h3>
+        <h3>Why WeaveFit?</h3>
         <p>
           Expert tailors, premium fabrics, modern designs,
           and perfect-fit assurance.
@@ -272,10 +265,7 @@
   </div>
 
 </section>
-<!-- ================= BUSINESS INFO SECTION END ================= -->
 
-
-  
    <!-- FOOTER -->
 <footer class="footer">
 
@@ -283,20 +273,20 @@
 
     <!-- BRAND -->
     <div class="footer-col brand">
-      <h2>SmartTailor<span>Pro</span></h2>
+      <h2>Weave<span>Fit</span></h2>
       <p>
         Premium tailoring services delivering perfect fit,
         smart style, and confidence for every occasion.
       </p>
     </div>
 
-    <!-- QUICK LINKS -->
     <div class="footer-col">
       <h3>Quick Links</h3>
       <ul>
-        <li><a href="homepage.html">Home</a></li>
-        <li><a href="homepage.html#about">About</a></li>
-        <li><a href="homepage.html#services">Services</a></li>
+       <li><a href="#top">Home</a></li>
+      <li><a href="#About">About</a></li>
+      <li><a href="#services">Services</a></li>
+
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
@@ -324,7 +314,7 @@
 
   <!-- COPYRIGHT -->
   <div class="footer-bottom">
-    © 2026 SmartTailor Pro | All Rights Reserved
+    © 2026 WeaveFit | All Rights Reserved
   </div>
 
 </footer>
